IVYPORTAL-9599 Various or urgent requests in IVYPORTAL S186  - IVYPORTAL-9488 [BUG][Minor] Alignment on upload in process Showcase application: revert code
Former-commit-id: e589e5ca0965ef0e387eb0f6ec522d53168495d1

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -3337,14 +3337,6 @@ _:-ms-fullscreen, :root .new-absence-messages .ui-messages-error {
   overflow: auto;
 }
 
-.ui-fileupload-content .ui-progressbar {
-  top: 0px !important;
-}
-
-.ui-fileupload-preview {
-  vertical-align: middle;
-}
-
 .ui-tooltip {
   padding: 0px !important;
   border-top-right-radius: 5px;
@@ -4112,10 +4104,6 @@ _:-ms-fullscreen, :root .content-link-history {
 .favorite-process-title {
   display: inline-block;
   padding-right: 20px;
-}
-
-.ui-fileupload.ui-widget .ui-fileupload-content .ui-fileupload-row>div {
-  vertical-align: middle;
 }
 
 /**************DATA TABLE START*******************/
